--- a/src/pages/subir/subir.html
+++ b/src/pages/subir/subir.html
@@ -27,7 +27,7 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <button block ion-button icon-left>
+        <button block ion-button icon-left (click)='mostrarGaleria()' >
           <ion-icon name="photos" ></ion-icon>
           Cargar
         </button>
