--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,7 +8,8 @@
 
 <ion-content>
 
-  <ion-card *ngFor="let post of posts | async">
+  <!--<ion-card *ngFor="let post of posts | async">-->
+  <ion-card *ngFor="let post of subirSrv.imagenes">
     <img [src]="post.img" />
     <ion-card-content>
       <ion-card-title>
