--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -18,7 +18,7 @@
     </ion-card-content>
     <ion-row>
       <ion-col text-right>
-        <button ion-button small clear icon-left>
+        <button ion-button small clear icon-left (click)='compartir(post)'>
             <ion-icon name='share-alt'></ion-icon>
             Compartir
           </button>
